--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "qrcodejs2": "^0.0.2",
     "qs": "^6.5.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
