--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "qrcodejs2": "^0.0.2",
